--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,5 +2,5 @@ theme: jekyll-theme-cayman
 gems:
   - jekyll-octicons
 
-title: Introduction to Command Line Interface 
+title: Nanopore Sequencing for Biosecurity 
 description: 
