--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,4 +3,4 @@ gems:
   - jekyll-octicons
 
 title: Nanopore Sequencing for Biosecurity 
-description: 
+description: Course material for Oxford Nanopore Data Analysis workshop. 
